fix header overflow in small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ figcaption {
     padding: 20px;
     box-shadow: 0px 4px 8px #ccc;
     margin-top: 40px;
+    overflow: hidden;
 }
 img {
     max-width: 100%
@@ -69,4 +70,9 @@ footer {
 }
 footer a {
     color: #fff;
+}
+@media only screen and (max-width: 380px) {
+    h2 {
+        font-size: 1.6em;
+    }
 }
